infrastructure/k8s/routes/grafana-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  host: grafana-iamakamen-dev.apps.rm3.7wse.p1.openshiftapps.com
  to:
    kind: Service
    name: grafana
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
